fix full calendar not scrollable on mobile issue

--- a/app/assets/stylesheets/react/theme.scss
+++ b/app/assets/stylesheets/react/theme.scss
@@ -291,3 +291,9 @@
 .comment-message {
   word-wrap: break-word;
 }
+
+@media (max-width: 621px){
+  .fc-scroller {
+    height: 100% !important;
+  }
+}
